details header added

--- a/Apex.html
+++ b/Apex.html
@@ -1,4 +1,7 @@
-<centre>
+<center>
 <h1>Application Name</h1>
-</centre>
+</center>
 <hr>
+<h2>Details</h2>
+<p>Application data and the details will appear here</p>
+
